--- a/build.gradle
+++ b/build.gradle
@@ -13,7 +13,7 @@ apply plugin: 'net.minecraftforge.gradle.forge'
 
 version = "${mcversion}-${mod_version}"
 group = "com.raptor.sdu" // http://maven.apache.org/guides/mini/guide-naming-conventions.html
-archivesBaseName = "StorageDrawersUnlimited"
+archivesBaseName = "StorageDrawersUnlimitedFixed"
 
 sourceCompatibility = targetCompatibility = '1.8' // Need this here so eclipse task generates correctly.
 compileJava {
